--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.10",
+    "bcrypt": "^5.0.1",
+    "mongoose": "^6.6.1",
     "next": "12.3.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-markdown": "^8.0.3",
+    "zod": "^3.19.1"
   },
   "devDependencies": {
     "eslint": "8.23.1",
