--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nextui-org/react": "^1.0.0-beta.10",
     "bcrypt": "^5.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.1",
     "next": "12.3.0",
     "react": "18.2.0",
